--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,9 @@ before_install:
   - docker build -t tomna/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run tomna/docker-react npm run test -- --coverage
+  - docker run -e CI=true tomna/docker-react npm run test -- --coverage
+
+
+
+
+
