added travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,18 @@ before_install:
 script:
   - docker run -e CI=true tomna/docker-react npm run test -- --coverage
 
+deploy : 
+  provider : elasticbeanstalk
+  region : "ap-northeast-2"
+  app: "docker"
+  env : "Docker-env"
+  bucket_name: elasticbeanstalk-ap-northeast-2-587909237394
+  backet_name : "docker"
+  on : 
+    branch : master
+  access_key_id : $AWS_ACCESS_KEY
+  secret_access_key : "$AWS_SECRET_KEY"
+
 
 
 
